# dagather

./: .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
dagather/: __init__.py  exceptions.py  multigather.py  result.py  sibling_tasks.py  tasktemplate.py  util.py
doc/source/: conf.py  index.rst
scripts/: lint.sh  unittest.sh
tests/: test_dagather.py
