[tool.poetry]
name = "dagather"
version = "0.0.1"
description = "directed acyclic gather"
authors = ["ben avrahami"]
license = "MIT lisence"
readme = "README.md"
repository = "https://github.com/bentheiii/dagather"
packages = [
    {include="dagather"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pydantic = "*"
pytest = "*"
pytest-asyncio = "*"
flake8 = { version = "*", allow-prereleases = true }
pytest-cov = "*"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

