[tool.poetry]
name = "dagather"
version = "0.1.0"
description = "directed acyclic gather"
authors = ["ben avrahami"]
license = "MIT lisence"
readme = "README.md"
repository = "https://github.com/bentheiii/dagather"
packages = [
    {include="dagather"}
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = { version = "*", allow-prereleases = true }
pytest-cov = "*"
sphinx = "*"
pytype = { version = ">=2020.06.01", markers = "python_version < '3.9' and python_version >= '3.6' and platform_system != 'Windows'"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

